# LSM

./: .clang-format  .gitignore  1.res.sh  2.res.sh  CMakeLists.txt  Makefile  README.md  TODO  run
bash_scripts/: mkdir.sh
examples/: example-graph-exponential.ps  example-graph-linear.ps  example-graph-polinomial.ps
include/: SLE.h  calcs.h  gnuplot.h  lsm.h
lib/: CMakeLists.txt
sources/: main.c
sources/SLE/: SLE.c
sources/calcs/: calcs.c
sources/gnuplot/: gnuplot.c  gnuplot.h  result.ps  test.sh  test2.sh  unistd.c
sources/lsm/: lsm.c  lsm.h
src/: CMakeLists.txt  main.c
src/lsm/: CMakeLists.txt
src/lsm/calcs/: calcs.c
src/lsm/gnuplot/: gnuplot.c
src/lsm/lsm/: lsm.c
